tests/valid_tests/arrays.minijava
class Test {
    public static void main() {
        int[] arr; int i; int sum;
        arr = new int[5];
        i = 0;
        while (i < 5) {
            arr[i] = i * 2;
            i = i + 1;
        }
    }
}
