tests/invalid_tests/array_index_wrong_type.minijava
class ArrayIndex {
    public static void main() {
        int[] arr;
        arr = new int[10];
        boolean b;
        b = 0;
        arr[b] = 5;
    }
}
